fixed spacing between tabs in navbar

--- a/catch-you-later/src/frontend/css/style.css
+++ b/catch-you-later/src/frontend/css/style.css
@@ -317,7 +317,7 @@ html, body {
 
 .nav-tabs {
   display: flex;
-  gap: 1.5rem;
+  gap: 2.5rem;
   font-size: 1rem;
 }
 
